--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,10 +10,13 @@
   tags:
     - packages
 
-- name: Install boto
+- name: Install system python packages
   become: yes
   pip:
-    name: boto
+    name:
+      - boto
+      - python-dateutil
+      - boto3
   tags:
     - aws
     - s3
@@ -51,9 +54,16 @@
   tags:
     - benchmarks
 
-# - name: Publish benchmarks
-#   s3:
-#     bucket: "{{ s3_bucket }}"
-#     object: "{{ }}"
-#     src: "{{ }}"
-#     mode: put
+- name: Publish benchmarks
+  s3_sync:
+    bucket: "{{ s3_bucket }}"
+    file_root: "{{ workdir }}/{{ item }}/.asv/results"
+    key_prefix: "{{ item }}"
+  with_items: 
+    "{{ benchmark_repos }}"
+  environment:
+    AWS_ACCESS_KEY_ID: "{{ lookup('env', 'AWS_ACCESS_KEY_ID') }}"
+    AWS_SECRET_ACCESS_KEY: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
+  tags:
+    - s3
+    - publish
