--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 instance_type: t2.micro
 repo: 'https://github.com/dask/dask-benchmarks'
-workdir: "/home/{{ ansible_user }}/asv-suite"
+workdir: "/home/{{ ansible_user }}/{{ repo|basename }}"
 miniconda_dir: "/home/{{ ansible_user }}/miniconda3"
 machine:
   name: "asv-runner"
@@ -9,7 +9,7 @@ machine:
   os: "Linux 3.13.0-116-generic"
   ram: "501692"
   version: 1
-benchmark_repos:
+benchmark_roots:
   # Use "." for a single benchmark repo in the root repo
   - dask
   # - distributed
