--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 instance_type: t2.micro
 repo: 'https://github.com/dask/dask-benchmarks'
-workdir: "/home/{{ ansible_user }}/{{ repo|basename }}"
+run_name: "{{ repo|basename }}"
+workdir: "/home/{{ ansible_user }}/{{ run_name }}"
 miniconda_dir: "/home/{{ ansible_user }}/miniconda3"
+asv_config: "asv.conf.json"
 machine:
   name: "asv-runner"
   arch: "x86_64"
