--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -66,6 +66,7 @@ Vagrant.configure("2") do |config|
   # documentation for more information about their specific syntax and use.
   config.vm.provision "ansible" do |ansible|
     ansible.verbose = "v"
+    ansible.playbook = "miniconda.yml"
     ansible.playbook = "playbook.yml"
   end
 end
