--- a/tests/miniconda.yml
+++ b/tests/miniconda.yml
@@ -1,13 +1,14 @@
 ---
 - hosts: all
+  vars:
+    miniconda_env:
+      name: asv
+      channels:
+        - conda-forge
+      dependencies:
+        - python=3.5
+        - asv
+        - pip
   roles:
     - role: uchida.miniconda
       miniconda_prefix: "{{ ansible_env.HOME }}/miniconda"
-      miniconda_env:
-        name: asv
-        channels:
-          - conda-forge
-        dependencies:
-          - python=3.5
-          - asv
-          - pip
