add xarray to asv-runner

--- a/tests/full.yml
+++ b/tests/full.yml
@@ -13,3 +13,6 @@
     - project: numpy
       url: https://github.com/numpy/numpy
       asv_config: benchmarks/asv.conf.json
+    - project: xarray
+      url: https://github.com/pydata/xarray
+      asv_config: asv_bench/asv.conf.json
