Re-add dask and distributed

--- a/tests/full.yml
+++ b/tests/full.yml
@@ -13,3 +13,9 @@
     - project: xarray
       url: https://github.com/pydata/xarray
       asv_config: asv_bench/asv.conf.json
+    - project: dask
+      url: https://github.com/dask/dask-benchmarks
+      asv_config: dask/asv.conf.json
+    - project: distributed
+      url: https://github.com/dask/dask-benchmarks
+      asv_config: distributed/asv.conf.json
