--- a/tests/full.yml
+++ b/tests/full.yml
@@ -19,3 +19,6 @@
     - project: distributed
       url: https://github.com/dask/dask-benchmarks
       asv_config: distributed/asv.conf.json
+    - project: pymc3
+      url: https://github.com/pymc-devs/pymc3
+      asv_config: benchmarks/asv.conf.json
